Fixed alignment issues with form-fields.html glyphicons

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -5,31 +5,26 @@
 .plusicon {
     font-size: 16px;
     color: blue;
-    margin-left: 5px;
 }
 
 .okicon {
     font-size: 16px;
     color: green;
-    margin-left: 5px;
 }
 
 .removeicon {
     font-size: 16px;
     color: red;
-    margin-left: 5px;
 }
 
 .pencilicon {
     font-size: 16px;
     color: yellow;
-    margin-left: 5px;
 }
 
 .justifyicon {
     font-size: 16px;
     color: black;
-    margin-left: 5px;
 }
 
 /**********************************************************************************************************************/
